Commented out the code, Starting from scratch

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Assets\Scripts\LazyProfessorClient.cs" />
     <Compile Include="Assets\Scripts\NetworkedClient.cs" />
     <Compile Include="Assets\Scripts\GameSystemManager.cs" />
+    <Compile Include="Assets\Scripts\TicTacToeManager.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
